# pico_codan

./: .gitignore  CMakeLists.txt  data_playground  possible protocols  upload.ps1  upload.sh
src/: crc.h  main.cpp  test.txt
tools/: test.py
